Adicionado pagina 3 - blog - necessario arrumar ultima pagina

--- a/Marcio Paisagismo.html
+++ b/Marcio Paisagismo.html
@@ -55,8 +55,69 @@
             </div>
     </section>
 
-    <section id="page4"></section>
-    <section id="page5"></section>
+    <section id="page4">
+        <div class="blog">
+            <div class="blog-columns">
+                <div class="blog-post">
+                    <h2>Título do Artigo 1</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec est sed nulla sodales rutrum.
+                        Integer vitae erat eu massa luctus volutpat.</p>
+                    <a href="#">Leia mais</a>
+                </div>
+
+                <div class="blog-post">
+                    <h2>Título do Artigo 2</h2>
+                    <p>Curabitur eget tincidunt justo, non fringilla mi. Nullam euismod, sapien at iaculis auctor, urna
+                        justo mollis libero, sit amet sodales ipsum risus ac ligula.</p>
+                    <a href="#">Leia mais</a>
+                </div>
+
+                <div class="blog-post">
+                    <h2>Título do Artigo 3</h2>
+                    <p>Vestibulum interdum sapien nec neque auctor, ac fermentum elit interdum. Proin euismod viverra
+                        erat, sed lacinia quam fermentum quis.</p>
+                    <a href="#">Leia mais</a>
+                </div>
+
+                <div class="blog-post">
+                    <h2>Título do Artigo 4</h2>
+                    <p>Phasellus et magna nec quam fringilla ultricies. Nunc a est a justo rhoncus tincidunt. Sed
+                        dignissim lectus vel felis bibendum tincidunt.</p>
+                    <a href="#">Leia mais</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="page5">
+        <div class="contact-form">
+            <h2>Entre em Contato</h2>
+            <form>
+                <label for="name">Nome:</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">Mensagem:</label>
+                <textarea id="message" name="message" required></textarea>
+
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+        <footer>
+            <div class="footer-content">
+                <div class="contact-info">
+                    <h3>Informações de Contato</h3>
+                    <p>Endereço: Rua da Amostra, 123</p>
+                    <p>Telefone: (123) 456-7890</p>
+                    <p>E-mail: contato@marciopaisagismo.com</p>
+                </div>
+                <div class="back-to-home">
+                    <a href="#page1">Voltar para o início</a>
+                </div>
+            </div>
+        </footer>
+    </section>
 
     <script src="assets/css/script.js"></script>
 </body>
