--- a/Marcio Paisagismo.html
+++ b/Marcio Paisagismo.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marcio Paisagismo</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -14,9 +15,14 @@
             <ul>
                 <li class="page1"><a href="#page1">Serviços</a></li>
                 <li class="page2"><a href="#page2">Galeria</a></li>
+                <li class="logo"><img src="assets/img/Logo.jpeg" alt=""></li>
                 <li class="page4"><a href="#page4">Blog</a></li>
                 <li class="page5"><a href="#page5">Contato</a></li>
             </ul>
+            <div class="social-icons">
+                <a href="#" class="instagram-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="whatsapp-icon"><i class="fab fa-whatsapp"></i></a>
+            </div>
         </div>
     </nav>
 
@@ -25,25 +31,33 @@
     </section>
 
     <section id="page2">
-        <h1>Galeria</h1>
         <div class="galeria">
             <div class="galeria-item">
-                <img src="" alt="Imagem 1">
+                <img src="assets/img/galeria10.jpeg" alt="Imagem 1">
             </div>
             <div class="galeria-item">
-                <img src="" alt="Imagem 2">
+                <img src="assets/img/galeria11.jpeg" alt="Imagem 2">
             </div>
             <div class="galeria-item">
-                <img src="" alt="Imagem 3">
+                <img src="assets/img/galeria2.jpeg" alt="Imagem 3">
             </div>
             <div class="galeria-item">
-                <img src="" alt="Imagem 4">
+                <img src="assets/img/galeria9.jpeg" alt="Imagem 4">
             </div>
             <div class="galeria-item">
-                <img src="" alt="Imagem 5">
+                <img src="assets/img/galeria12.jpeg" alt="Imagem 5">
             </div>
             <div class="galeria-item">
-                <img src="" alt="Imagem 6">
+                <img src="assets/img/galeria8.jpeg" alt="Imagem 6">
+            </div>
+            <div class="galeria-item">
+                <img src="assets/img/galeria7.jpeg" alt="Imagem 7">
+            </div>
+            <div class="galeria-item">
+                <img src="assets/img/galeria6.jpeg" alt="Imagem 8">
+            </div>
+            <div class="galeria-item">
+                <img src="assets/img/galeria5.jpeg" alt="Imagem 9">
             </div>
     </section>
 
