--- a/Marcio Paisagismo.html
+++ b/Marcio Paisagismo.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marcio Paisagismo</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -14,9 +15,14 @@
             <ul>
                 <li class="page1"><a href="#page1">Serviços</a></li>
                 <li class="page2"><a href="#page2">Galeria</a></li>
+                <li class="logo"><img src="assets/img/Logo.jpeg" alt=""></li>
                 <li class="page4"><a href="#page4">Blog</a></li>
                 <li class="page5"><a href="#page5">Contato</a></li>
             </ul>
+            <div class="social-icons">
+                <a href="#" class="instagram-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="whatsapp-icon"><i class="fab fa-whatsapp"></i></a>
+            </div>
         </div>
     </nav>
 
