--- a/Marcio Paisagismo.html
+++ b/Marcio Paisagismo.html
@@ -31,25 +31,33 @@
     </section>
 
     <section id="page2">
-        <h1>Galeria</h1>
         <div class="galeria">
             <div class="galeria-item">
-                <img src="" alt="Imagem 1">
+                <img src="assets/img/galeria10.jpeg" alt="Imagem 1">
             </div>
             <div class="galeria-item">
-                <img src="" alt="Imagem 2">
+                <img src="assets/img/galeria11.jpeg" alt="Imagem 2">
             </div>
             <div class="galeria-item">
-                <img src="" alt="Imagem 3">
+                <img src="assets/img/galeria2.jpeg" alt="Imagem 3">
             </div>
             <div class="galeria-item">
-                <img src="" alt="Imagem 4">
+                <img src="assets/img/galeria9.jpeg" alt="Imagem 4">
             </div>
             <div class="galeria-item">
-                <img src="" alt="Imagem 5">
+                <img src="assets/img/galeria12.jpeg" alt="Imagem 5">
             </div>
             <div class="galeria-item">
-                <img src="" alt="Imagem 6">
+                <img src="assets/img/galeria8.jpeg" alt="Imagem 6">
+            </div>
+            <div class="galeria-item">
+                <img src="assets/img/galeria7.jpeg" alt="Imagem 7">
+            </div>
+            <div class="galeria-item">
+                <img src="assets/img/galeria6.jpeg" alt="Imagem 8">
+            </div>
+            <div class="galeria-item">
+                <img src="assets/img/galeria5.jpeg" alt="Imagem 9">
             </div>
     </section>
 
